--- a/project-fds/src/styles/global.css
+++ b/project-fds/src/styles/global.css
@@ -47,3 +47,14 @@ main {
     margin-top: 10%; 
 }
 
+@media only screen and (max-width: 1000px) {
+  .wrapper {
+    padding-bottom: 75px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .wrapper {
+    padding-bottom: 100px;
+  }
+}
